fix: HeaderBlock image width on small devices

--- a/static/styles.css
+++ b/static/styles.css
@@ -19,6 +19,5 @@ section {
   padding: 1rem;
 }
 
-section.headerBlock {
-  text-align: center;
-}
+section.headerBlock { text-align: center; }
+section.headerBlock img { max-width: 100%; }
